# facet-optimizer

./: .env.example  .gitignore  LICENSE  README.md  eval_facet.py  eval_prompt.py  pyproject.toml
.agents/skills/facet-prompt-optimizer/: SKILL.md
facet_optimizer/: __init__.py  common.py  config.py  dataset_rows.py  eval_utils.py  facet_definitions.py  facet_runtime.py  factoring.py  final_facets.py  ground_truth.py  jsonl.py  models.py  parse_facet_call.py  pipeline.py  prompt_artifacts.py  prompting.py  source.py  text.py
scripts/: bootstrap_facet_definitions.py  build_ground_truth_dataset.py  create_facet_dataset.py  publish_facet.py  sample_facet_roots.py  upload_ground_truth_dataset.py
